compiler-core/src/snapshots/gleam_core__wasm__tests__wasm_2n.snap
---
source: compiler-core/src/wasm.rs
expression: wat
---
(module
(func $add (export "add") (param $x i32) (param $y i32) (result i32)
    (local.get $x)
    (local.get $y)
    (i32.add)))
