compiler-core/src/snapshots/gleam_core__wasm__tests__wasm_6nd.snap
---
source: compiler-core/src/wasm.rs
expression: wat
---
(module
(type $Cat_struct (struct (field $name i32) (field $cuteness i32)))
(type $Kitten_struct (struct (field $name i32) (field $age i32) (field $cuteness i32)))
(func $Cat (param $name i32) (param $cuteness i32) (result (ref $Cat_struct))
    (local.get $name)
    (local.get $cuteness)
    (struct.new $Cat_struct))
(func $Kitten (param $name i32) (param $age i32) (param $cuteness i32) (result (ref $Kitten_struct))
    (local.get $name)
    (local.get $age)
    (local.get $cuteness)
    (struct.new $Kitten_struct))
(func $add_cat (param $cat (ref $Cat_struct)) (result i32)
    (local.get $cat)
    (struct.get $Cat_struct $cuteness)
    (local.get $cat)
    (struct.get $Cat_struct $name)
    (i32.add))
(func $grow (param $kitten (ref $Kitten_struct)) (result (ref $Cat_struct))
    (call $Cat (local.get $kitten) (struct.get $Kitten_struct $name) (local.get $kitten) (struct.get $Kitten_struct $cuteness) (i32.const 1) (i32.sub)))
(func $add (export "add") (param $x i32) (param $y i32) (result i32)
    (local $kitten (ref $Kitten_struct))
    (local $cat (ref $Cat_struct))
    (call $Kitten (local.get $x) (i32.const 12) (local.get $y))
    (local.set $kitten)
    (call $grow (local.get $kitten))
    (local.set $cat)
    (call $add_cat (local.get $cat))))
